# Advent-Of-Code-2021

./: Cargo.toml  Readme.md  run_tests.sh  utils.rs
.github/workflows/: rust.yml
day1/: main.rs
day10/: main.rs  solution.txt
day11/: main.rs  solution.txt
day12/: main.rs  solution.txt
day13/: main.rs  solution.txt
day14/: main.rs  solution.txt
day15/: main.rs  solution.txt
day16/: main.rs  solution.txt
day17/: main.rs  solution.txt
day2/: main.rs  solution.txt
day3/: main.rs  solution.txt
day4/: main.rs  solution.txt
day5/: line.rs  main.rs
day6/: main.rs  solution.txt
day7/: main.rs  solution.txt
day8/: main.rs  solution.txt
day9/: main.rs  solution.txt
